various slide, Stata code fixes

--- a/slides/NTNU2017-1.tex
+++ b/slides/NTNU2017-1.tex
@@ -44,7 +44,7 @@
 }
 
 
-\title{Session I\\Survey Experiments in Context}
+\title{Session I\\Survey Experiments in Practice}
 
 % ### Monday 30 January - *Morning*
 % 
@@ -264,6 +264,8 @@ What distinguishes a \textit{survey} experiment from any other experiment?
 \item Survey Experiments
 \end{enumerate}
 
+\vspace{1em}
+
 Difference is only about \textit{setting} and \textit{mode}.\\
 
 \only<2->{Logic and methods of analysis are the same!}
@@ -315,7 +317,6 @@ Difference is only about \textit{setting} and \textit{mode}.\\
 	\item Sample Average Treatment Effect (SATE) is the average of the sample's individual-level treatment effects
 	\item SATE is unbiased estimate of PATE
 	\end{itemize}
-\item<4-> Sometimes a distinction is made between survey and online experiments
 \end{itemize}
 }
 
@@ -1673,7 +1674,7 @@ The best criterion for evaluating the quality of an experiment is whether it man
 \item<2-> Implications:
 	\begin{itemize}\footnotesize
 	\item Design experimental treatments that are non-obvious
-	\item Do not disclose the purpose of the study up front\footnote{But, consider the ethics of not doing so (more Friday)}
+	\item Do not disclose the purpose of the study up front\footnote{But, consider the ethics of not doing so}
 	\item Be careful about using manipulation checks and pre-outcome measures
 	\end{itemize}
 \end{itemize}
@@ -2179,7 +2180,7 @@ With the passage of the Patriot Act in 2001, the FBI can now enter your home, se
 
 \small
 
-Now I'm going to read you three things that sometimes make people angry or upset. After I read all three, just tell me \textit{how many} of them upset you. I don't want to know which ones. just \textit{how many}.
+Now I'm going to read you three things that sometimes make people angry or upset. After I read all \only<1>{three}\only<2>{four}, just tell me \textit{how many} of them upset you. I don't want to know which ones. just \textit{how many}.
 
 \footnotesize
 
