--- a/slides/NTNU2017-2.tex
+++ b/slides/NTNU2017-2.tex
@@ -46,7 +46,7 @@
 }
 
 
-\title{Session II\\Survey Experiments in Context}
+\title{Session II\\Survey Experiments in Practice}
 
 % ### Tuesday 31 January - *Morning*
 % 
